@@ -1,4 +1,9 @@
 
+Изменения в nginx 1.17.10                                         14.04.2020
+
+    *) Добавление: директива auth_delay.
+
+
 Изменения в nginx 1.17.9                                          03.03.2020
 
     *) Изменение: теперь nginx не разрешает несколько строк "Host" в
