@@ -1,4 +1,9 @@
 
+Changes with nginx 1.17.10                                       14 Apr 2020
+
+    *) Feature: the "auth_delay" directive.
+
+
 Changes with nginx 1.17.9                                        03 Mar 2020
 
     *) Change: now nginx does not allow several "Host" request header lines.
